[gd_scene load_steps=3 format=3 uid="uid://ygp5aoqn4gre"]

[ext_resource type="StyleBox" uid="uid://dxsblknobb37r" path="res://styles/common_style.tres" id="1_rnf3l"]
[ext_resource type="Script" uid="uid://bl7guoeffeo44" path="res://scenes/ui/selection_panel/selection_card.gd" id="2_61x6i"]

[node name="SelectionCard" type="Button"]
custom_minimum_size = Vector2(128, 128)
theme_override_styles/hover = ExtResource("1_rnf3l")
theme_override_styles/normal = ExtResource("1_rnf3l")
icon_alignment = 1
expand_icon = true
script = ExtResource("2_61x6i")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
